# forc_dnd_battle_simulator

./: CMakeLists.txt  README.md  copy_skel.sh  main.cpp
Classes/: ActionCreator.cpp  ActionCreator.h  BattleHandler.cpp  BattleHandler.h  IndividualCreator.cpp  IndividualCreator.h  TemplateCreator.cpp  TemplateCreator.h
Helpers/: DataHandler.h  DisplayHelper.cpp  DisplayHelper.h  FileHandler.cpp  FileHandler.h  HelperFunctions.cpp  HelperFunctions.cpp.old  HelperFunctions.h  HelperFunctions.h.old  InputHandler.cpp  InputHandler.h  Structs.h
Helpers/Structs/: Payload.cpp  Payload.h  Stats.h  Status.h
Helpers/SubMenus/: Actions.cpp  Actions.h  Battle.cpp  Battle.h  Roster.cpp  Roster.h  Templates.cpp  Templates.h
Models/: Being.cpp  Being.h  Creature.cpp  Creature.h  EldritchHorror.cpp  EldritchHorror.h  Investigator.cpp  Investigator.h  Person.cpp  Person.h
Resources/: actions_file.txt  template_file.txt
Saves/: DvsW.txt  yes.txt
Templates/: BaseTemplate.cpp  BaseTemplate.h  Role.h  Species.h
Templates/ActionTemplates/: ActionBaseTemplate.cpp  ActionBaseTemplate.h  Defensive.cpp  Defensive.h  Offensive.cpp  Offensive.h
Templates/IndividualTemplates/: BaseTemplate.h  IndividualBaseTemplate.cpp  IndividualBaseTemplate.h  Role.cpp  Role.h  Species.cpp  Species.h
